# zh_learn_ja

./: README.md  fitter_chinese_word.py  homophone_reading_types.json  japanese_readings.csv  japanese_readings_kun.csv  japanese_readings_on.csv  main.py  not_only_chinese.csv  pyproject.toml
test/: fitter_chinese_word.py
zh_learn_ja/: find_py.py  fitter_chinese.py  get_n1_words.py  identify_reading_type.py  kakasi_convert.md  zh2ja50.py
zh_learn_ja/data/: all_n1_word.txt  homophone_kanji.json  jlpt_kanji_lists.json  n1_word_9000.csv
